test(batch): unit test last contact date randomization